# cliqueformer-fork

./: .gitignore  README.md  fig.py  main.py  optimize.py  pyproject.toml  requirements.txt  training.py
architectures/: backbones.py  blocks.py  extras.py
configs/dna/: cliqueformer.py  coms.py  mbo_transformer.py  naive.py  rwr.py
configs/lrbf/: cliqueformer.py  coms.py  mbo_transformer.py  naive.py  rwr.py
configs/superconductor/: cliqueformer.py  coms.py  mbo_transformer.py  naive.py  rwr.py
configs/tfbind8/: cliqueformer.py  coms.py  mbo_transformer.py  naive.py  rwr.py
data/: __init__.py  dataset.py  dna.py  extras.py  lrbf.py  superconductor.py  tfbind8.py
distributions/: categorical.py
models/: __init__.py  cliqueformer.py  coms.py  mbo_transformer.py  naive.py
optimization/: lerners.py
scrape/: README.md
scrape/Bioseq/: download_assets.py  download_data.py  download_model.py
scrape/autofocused_oracles/: superconductivity_groundtruth.ipynb  train_gt.py  util.py
