[project]
name = "cliqueformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.0.0",
    "grelu==1.0.2",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "lightning==2.4.0",
    "matplotlib==3.9.2",
    "ml-collections==0.1.1",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "torch==2.3.0",
    "tqdm==4.66.1",
    "xgboost==2.1.1",
]
